syntax = "proto3";

message Contains {
  double carbohydrates = 1;
  double fats = 2;
  double proteins = 3;
  double sugar = 4;
}

message Dish {
  string dish_name = 1;
  int32 estimated_avg_calories = 2;
  repeated string ingredients = 3;
  int32 total_avg_weight = 4;
}

message TotalForDay {
  Contains contains = 1;
  int32 total_avg_weight = 2;
  int32 total_calories = 3;
}

message TodayFood {
  repeated Dish dishes_today = 1;
  TotalForDay total_for_day = 2;
}
